# vdr-to-hts-import

./: .gitignore  Pipfile  README.md  pyproject.toml  test_vdr_to_hts_import.py  vdr-to-hts-import.py  vdr_to_hts_import.py
